--- a/ex04/Makefile
+++ b/ex04/Makefile
@@ -3,19 +3,19 @@ NAME		=	sedIsForLosers
 CXX			=	c++
 FLAGS		=	-std=c++98 -Wall -Werror -Wextra -fsanitize=address
 #---PHILO_VAR----------------------------------
-SRC			=	main.cpp
-
+SRC			=	main.cpp \
+				utils.cpp
 OBJS_DIR	=	.OBJS/
 OBJS		=	$(addprefix $(OBJS_DIR), $(SRC:.cpp=.o))
-HEADER		=
+HEADER		=	utils.hpp
 #---RULES----------------------------------------
 
 all:			$(NAME)
 
 $(NAME):		$(OBJS)
-				@echo "\033[0;33m\nCOMPILING unnecessary_violence ...\n"
+				@echo "\033[0;33m\nCOMPILING sedIsForLosers ...\n"
 				@$(CXX) $(FLAGS) $(OBJS) -o $@
-				@echo "\033[1;32m./unnecessary_violence created\n"
+				@echo "\033[1;32m./sedIsForLosers created\n"
 
 $(OBJS_DIR)%.o:	%.cpp | dir
 				@$(CXX) $(FLAGS) -c $< -o $@
@@ -26,12 +26,12 @@ $(OBJS_DIR):
 				@mkdir -p $(OBJS_DIR)
 
 clean:
-				@echo "\033[0;31mDeleting unnecessary_violence object...\n"
+				@echo "\033[0;31mDeleting sedIsForLosers object...\n"
 				@$(RM) -rf $(OBJS_DIR)
 				@echo "\033[1;32mDone\n"
 
 fclean:			clean
-				@echo "\033[0;31mDeleting unnecessary_violence executable..."
+				@echo "\033[0;31mDeleting sedIsForLosers executable..."
 				@rm -rf $(NAME)
 				@echo "\033[1;32mDone\n"
 
