--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,8 +1,8 @@
 #---COMMON_VAR-----------------------------------
-NAME		=	BraiiiiiiinnnzzzZ
+NAME		=	Moar
 CXX			=	c++
-FLAGS		=	-std=c++98 -Wall -Werror -Wextra -fsanitize=address
-#---PHILO_VAR----------------------------------
+FLAGS		=	-std=c++98 -Wall -Werror -Wextra
+#---MOAR----------------------------------
 SRC			=	main.cpp \
 				newZombie.cpp \
 				randomChump.cpp \
@@ -17,9 +17,9 @@ HEADER		=	Zombie.hpp
 all:			$(NAME)
 
 $(NAME):		$(OBJS)
-				@echo "\033[0;33m\nCOMPILING BraiiiiiiinnnzzzZ...\n"
+				@echo "\033[0;33m\nCOMPILING Moar...\n"
 				@$(CXX) $(FLAGS) $(OBJS) -o $@
-				@echo "\033[1;32m./BraiiiiiiinnnzzzZ created\n"
+				@echo "\033[1;32m./Moar created\n"
 
 $(OBJS_DIR)%.o:	%.cpp | dir
 				@$(CXX) $(FLAGS) -c $< -o $@
@@ -30,15 +30,16 @@ $(OBJS_DIR):
 				@mkdir -p $(OBJS_DIR)
 
 clean:
-				@echo "\033[0;31mDeleting BraiiiiiiinnnzzzZ object...\n"
+				@echo "\033[0;31mDeleting Moar object...\n"
 				@$(RM) -rf $(OBJS_DIR)
 				@echo "\033[1;32mDone\n"
 
 fclean:			clean
-				@echo "\033[0;31mDeleting BraiiiiiiinnnzzzZ executable..."
+				@echo "\033[0;31mDeleting Moar executable..."
 				@rm -rf $(NAME)
 				@echo "\033[1;32mDone\n"
 
-re:				fclean all
+re:				fclean
+				$(MAKE) all
 
 .PHONY:			all clean fclean re
