--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,8 +1,8 @@
 #---COMMON_VAR-----------------------------------
 NAME		=	BraiiiiiiinnnzzzZ
 CXX			=	c++
-FLAGS		=	-std=c++98 -Wall -Werror -Wextra -fsanitize=address
-#---PHILO_VAR----------------------------------
+FLAGS		=	-std=c++98 -Wall -Werror -Wextra
+#---BRAINZ_VAR----------------------------------
 SRC			=	main.cpp \
 				newZombie.cpp \
 				randomChump.cpp \
@@ -38,6 +38,7 @@ fclean:			clean
 				@rm -rf $(NAME)
 				@echo "\033[1;32mDone\n"
 
-re:				fclean all
+re:				fclean
+				$(MAKE) all;
 
 .PHONY:			all clean fclean re
