--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -16,7 +16,7 @@ HEADER		=	Zombie.hpp
 
 all:			$(NAME)
 
-$(NAME):		$(OBJS)
+$(NAME):		$(OBJS) $(HEADER)
 				@echo "\033[0;33m\nCOMPILING Moar...\n"
 				@$(CXX) $(FLAGS) $(OBJS) -o $@
 				@echo "\033[1;32m./Moar created\n"
