--- a/ex05/Makefile
+++ b/ex05/Makefile
@@ -7,7 +7,7 @@ SRC			=	main.cpp \
 				Harl.cpp
 OBJS_DIR	=	.OBJS/
 OBJS		=	$(addprefix $(OBJS_DIR), $(SRC:.cpp=.o))
-HEADER		=	HARL.hpp
+HEADER		=	Harl.hpp
 #---RULES----------------------------------------
 
 all:			$(NAME)
